grammar fixes, thanks to Alfred and FJC on AtariAge

--- a/atmas2-en.tex
+++ b/atmas2-en.tex
@@ -108,7 +108,7 @@ Note: \key{ESC} means you have to press the ESC-key.
 \atmas is a powerful development system for assembly programs on your Atari computer.
 \atmas consists of three integrated subsystems: an editor, a macro assembler and a machine
 language monitor.
-These components together allow a convenient and fast low level assembly program development.
+These components together provide a convenient and fast low level assembly program development.
 
 All three parts of this programming environment  are tightly integrated and only
 a keystroke away from each other.
@@ -133,7 +133,7 @@ language  programming  of the Atari  computer.
 
 The \atmas editor is a screen oriented editor that works without any line numbers.
 It essentially behaves like a word processor.
-This eliminates the tedious entry of LIST commands which is known from several other
+This eliminates the tedious entry of LIST commands such as is used by several other
 editors (e.g. in BASIC).
 You can easily move through the listing by using the cursor keys,
 which then scrolls from top to bottom or from bottom to top.
@@ -530,9 +530,9 @@ character in the upper left corner of the screen.
 The third pass is a listing of the assembled program on the printer or the screen output (see OUT-directive).
 
 
-The process of assembling is continued until either the source is over,
+The process of assembling is continued until either the end of the source text has been reached,
 a Ctrl-Z character is detected (assembler stop character) or an error has been detected.
-In the latter case, an error message (see Appendix B) is displayed on the screen.
+In the last case, an error message (see Appendix B) is displayed on the screen.
 Any key will take you back to the editor, exactly at the place that caused the error.
 You can immediately improve the error and restart the assembler with \key{CTRL-Y}.
 
